Email and logo commit

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel=”shortcut icon” href=”%PUBLIC_URL%/favicon.ico”>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Baloo+Paaji+2:400,600,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,600,700,800&display=swap" rel="stylesheet">
@@ -11,5 +12,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script data-cfasync="false" type="text/javascript" src="form-submission-handler.js"></script>
   </body>
 </html>
